--- a/android/app/src/main/res/drawable/splash_background.xml
+++ b/android/app/src/main/res/drawable/splash_background.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <!-- Background color -->
-    <item android:drawable="@color/splash_background_color" />
-    
-    <!-- App logo centered -->
+    <!-- Full screen splash image -->
     <item>
         <bitmap
-            android:gravity="center"
-            android:src="@mipmap/ic_launcher" />
+            android:gravity="fill"
+            android:src="@drawable/splashscreen" />
     </item>
 </layer-list>
