--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- Splash screen background color -->
-    <color name="splash_background_color">#FFFFFF</color>
+    <color name="splash_background_color">#1A1B23</color>
     
     <!-- Primary app colors -->
     <color name="primary_color">#FF6B35</color>
