--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="primary_color">#FF6B35</color>
     <color name="primary_dark_color">#E55A2B</color>
     <color name="accent_color">#FF6B35</color>
+    
+    <!-- Notification color -->
+    <color name="notification_color">#3498db</color>
 </resources>
